Fix buttons text wrap

--- a/style.css
+++ b/style.css
@@ -132,7 +132,14 @@ button:focus {
   border-bottom: 1px solid transparent;
   border-radius: 8px;
   background-color: rgba(255, 255, 255, .0);
+  font-size: 13px;
+  white-space: nowrap;
+}
+
+@media screen and (min-width: 991px) {
+  .map-switcher__button {
   font-size: 14px;
+  }
 }
 
 .map-switcher__button:hover {
@@ -276,6 +283,7 @@ button:focus {
   font-size: 16px;
   text-align: center;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .contact-button:hover {
